Revert btn-promote style.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -46,7 +46,7 @@
       border-top: 0;
       border-radius: 0 0 @border-radius-base 0;
     }
-    .btn-promote {
+    .btn-red {
       color: #b00;
     }
     > .btn-group .btn-default {
@@ -120,12 +120,12 @@
 }
 
 .toolbar {
-  .btn-group > .btn {
+  .btn-group > .btn-promote {
     margin-left: 0;
     margin-right: 1px;
     width: 98px;
   }
-  .btn-group > .btn:not(:first-child):not(:last-child) {
+  .btn-group > .btn-promote:not(:first-child):not(:last-child) {
     .border-left-radius(@border-radius-small);
   }
   .promotes-count {
