--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -123,7 +123,8 @@
   .btn-group > .btn-promote {
     margin-left: 0;
     margin-right: 1px;
-    width: 98px;
+    width: 100px;
+    height: 30px;
   }
   .btn-group > .btn-promote:not(:first-child):not(:last-child) {
     .border-left-radius(@border-radius-small);
