Fix main-title background path.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/landing.less
@@ -159,6 +159,6 @@ body {
 
 @media screen and (min-width: @screen-md-max) {
   #main-title {
-    background: #333 url('../img/screenshot.jpg') no-repeat center;
+    background: #333 url('../../img/screenshot.jpg') no-repeat center;
   }
 }
