--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -7,15 +7,16 @@
     </a>
   </div>
 
-  <div class="ad-section">
+  {# weird bugs. cannot use ad-section class name #}
+  <div class="ad-sect">
     <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
   </div>
 
-  <div class="ad-section ad-counter text-overflow">
+  <div class="ad-sect ad-counter text-overflow">
     <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}"><span class="promotes-count">{{ ad.promoteesCount }}</span> Promotes</a>
   </div>
 
-  <div class="ad-section ad-user clearfix">
+  <div class="ad-sect ad-user clearfix">
     {% include 'AdstacyAppBundle:User:user_mini.html.twig' with {user: ad.user, text: ago(ad.created), as_link: true} %}
     <div class="ad-user-action btn-group">
       {% if app.user %}
