--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -38,10 +38,7 @@
               </button>
             </div>
           {% else %}
-            <div class="btn-group btn-group-sm">
-              <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote"><i class="icon-bullhorn"></i> Unpromote</a>
-              <button type="button" class="btn btn-default promotes-count"><span class="promotes-count">{{ ad.promoteesCount }}</span></button>
-            </div>
+            <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}" class="btn btn-default btn-sm"><span class="promotes-count">{{ ad.promoteesCount }}</span> Promotes</a>
           {% endif %}
 
           {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
@@ -146,7 +143,7 @@
       $('#ad-detail-container').ajaxlink('promote_single');
       $('#ad-detail-sidebar').ajaxlink('follow_single');
       $('#ad-detail-sidebar').scrollToFixed({
-        marginTop: 55 
+        marginTop: 55
       });
     });
   </script>
