--- a/src/Adstacy/AppBundle/Resources/public/less/module/image-preview.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/module/image-preview.less
@@ -1,5 +1,18 @@
 @import '../variables.less';
 
+.image-upload-box {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.image-upload {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -9999px;
+}
+
 .image-preview {
   &.small img {
     max-height: 200px;
