--- a/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
@@ -32,7 +32,9 @@
 
 {% block image_widget %}
 {% set imageExists = obj and obj.image and obj.imagename %}
-<input class="image-upload hide" type="file" name="{{ full_name }}" {% if not imageExists and image_required %}required=required{% endif %}>
+<div class="image-upload-box">
+  <input class="image-upload hide" type="file" name="{{ full_name }}" {% if not imageExists and image_required %}required=required{% endif %}>
+</div>
 
 <div class="input-group">
   <input type="text" class="form-control image-upload-text image-upload-trigger" placeholder="Click to choose image" readonly="readonly" />
