--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -33,12 +33,19 @@
                 <i class="icon-bullhorn"></i>
                 <span class="text">Promoted</span>
               </a>
-              <button type="button" class="btn btn-default promotes-count">
+              <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}" class="btn btn-default promotes-count">
                 <span class="promotes-count">{{ ad.promoteesCount }}</span>
-              </button>
+              </a>
             </div>
           {% else %}
-            <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}" class="btn btn-default btn-sm"><span class="promotes-count">{{ ad.promoteesCount }}</span> Promotes</a>
+            <div class="btn-group btn-group-sm">
+              <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote">
+                <i class="icon-bullhorn"></i> Promote
+              </a>
+              <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}" class="btn btn-default promotes-count">
+                <span class="promotes-count">{{ ad.promoteesCount }}</span>
+              </a>
+            </div>
           {% endif %}
 
           {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
