Use screenshot.png as og:image meta

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
     <meta property="fb:app_id" content="{{ facebook_app_id }}">
     <meta property="og:url" content="{{ app.request.uri }}">
     <meta property="og:title" content="{{ block('title') }}">
-    <meta property="og:image" content="{% block meta_image %}{{ asset('favicon.ico') }}{% endblock %}">
+    <meta property="og:image" content="{% block meta_image %}{{ asset('bundles/adstacyapp/img/screenshot.png') }}{% endblock %}">
     <title>{% block title %}Adstacy.com - Ads have never been so fun{% endblock %}</title>
 
     <link rel="icon shortcut" type="image/ico" href="{{ asset('favicon.ico') }}">
