--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -1,4 +1,5 @@
 @import "../variables.less";
+@import "../bootstrap/mixins.less";
 
 #create-ad-container {
   width: 800px;
@@ -9,14 +10,34 @@
   .image-area {
     overflow: hidden;
     width: 100%;
-  }
-  .image-preview {
-    width: 100%;
-    display: block;
-    margin: 10px auto;
-    text-align: center;
-    img {
-      max-width: 800px;
+
+    .image-upload-input {
+      position: relative;
+      overflow: hidden;
+    }
+
+    .image-upload {
+      cursor: pointer;
+      display: block;
+      font-size: 23px;
+      padding: 5px;
+      position: absolute;
+      right: 0;
+      top: 0;
+      text-align: right;
+      z-index: 100;
+      width: 100%;
+      .opacity(0);
+    }
+
+    .image-preview {
+      width: 100%;
+      display: block;
+      margin: 10px auto;
+      text-align: center;
+      img {
+        max-width: 800px;
+      }
     }
   }
   .meta-area {
