Temporarily disable characters left keypress.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -111,7 +111,7 @@
         $charsLeft.text({{ desc_length }} - val.length);
       }
       $desc.keyup(checkCharsLeft);
-      $desc.keypress(checkCharsLeft);
+      //$desc.keypress(checkCharsLeft);
     });
   </script>
 {% endblock %}
