--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -68,11 +68,13 @@
         {% include '::header.html.twig' %}
       {% endblock %}
       <div class="body clearfix">
+        {% block beta_info %}
         <div class="adstacy-container">
           <div class="alert alert-info" style="margin-bottom: 0;">
             <p>{{"beta_info"|trans({'%url%': path('adstacy_app_contact')})|raw}}</p>
           </div>
         </div>
+        {% endblock %}
         {% set allFlashes = app.session.flashbag.all() %}
         {% if allFlashes|length > 0 %}
           <div class="adstacy-container">
