--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -15,6 +15,8 @@
   {% include '::header.html.twig' with {register: false}  %}
 {% endblock %}
 
+{% block beta_info %}{% endblock %}
+
 {% block form_row %}
   <div class="form-group">
     {{ form_label(form, null, { label_attr: { class: 'hide' } }) }}
