Add parse url and parse hashtag to about me.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -94,7 +94,7 @@
         </div>
         {% if user.about %}
         <div class="panel-body user-about">
-          <p>{{ user.about }}</p>
+          <p>{{ parse_url(parse_hashtag(user.about)) }}</p>
         </div>
         {% endif %}
         <div class="thumb-container">
