change login convention.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/login.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/login.less
@@ -1,6 +1,6 @@
 @import "../variables.less";
 
-#login-container {
+#login {
   margin: 60px auto;
   width: 500px;
 
@@ -14,7 +14,7 @@
 }
 
 @media screen and (max-width: @screen-tablet) {
-  #login-container {
+  #login {
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
