change register convention.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/register.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/register.less
@@ -1,6 +1,6 @@
 @import "../variables.less";
 
-#register-container {
+#register {
   width: 500px;
 
   hr {
@@ -13,7 +13,7 @@
 }
 
 @media screen and (max-width: @screen-tablet) {
-  #register-container {
+  #register {
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
