--- a/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="register-container" class="panel panel-default">
+  <div id="register" class="panel panel-default">
     <div class="panel-heading">
       <h1>{{ "form_registration.title"|trans }}</h1>
     </div>
