change setting profile convantion.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/settings.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/settings.less
@@ -1,6 +1,6 @@
 @import "../variables.less";
 
-#settings-container {
+#settings {
   margin: auto;
   width: 760px;
 
@@ -39,10 +39,10 @@
 }
 
 @media screen and (max-width: @screen-tablet) {
-  #settings-container {
+  #settings {
     width: 100%;
   }
-  #settings-container .form-group .form-widget {
+  #settings .form-group .form-widget {
     width: 100%;
   }
 }
