--- a/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Profile/edit.html.twig
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content %}
-<div id="settings-container">
+<div id="settings">
   <div class="panel panel-default">
     <div class="panel-heading"><h1>User Info</h1></div>
     <div class="panel-body">
@@ -33,7 +33,6 @@
             {{ form_widget(form.image, { attr: { class: 'form-control' } }) }}
           </div>
         </div>
-
 
         <div class="form-group">
           {{ form_label(form.username, label|default(null), { label_attr: { class: 'control-label' } }) }}
