--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -119,90 +119,8 @@
   }
 }
 
-.toolbar {
-  .btn-group > .btn-promote {
-    margin-left: 0;
-    margin-right: 1px;
-    width: 100px;
-    height: 30px;
-  }
-  .btn-group > .btn-promote:not(:first-child):not(:last-child) {
-    .border-left-radius(@border-radius-small);
-  }
-  .promotes-count {
-    font-weight: bold;
-  }
-}
-
-#ad-detail-container {
-  position: relative;
-  width: 1000px;
-  margin: auto;
-
-  .panel-body {
-    padding: 10px;
-    border-bottom: 1px solid @border-color;
-
-    &:last-child {
-      border-bottom: 0;
-    }
-  }
-
-  .ad-description,
-  .user-about {
-    color: #555;
-    font-size: 13px;
-  }
-
-  p {
-    margin: 0;
-  }
-}
-
-#ad-detail-content {
-  width: 750px;
-
-  .lead {
-    font-size: 16px;
-  }
-
-  img {
-    .img-responsive(inline-block);
-  }
-}
-
-#ad-detail-sidebar {
-  width: 236px;
-  margin-left: 14px;
-}
-
-.thumb-container {
-  font-size: 0;
-  width: 234px;
-  padding: 10px 10px 0;
-
-  .thumb {
-    border: 1px solid @border-color;
-    font-size: 16px;
-    width: 102px;
-    height: 102px;
-    display: inline-block;
-    margin: 0 10px 10px 0;
-    border-radius: @border-radius-base;
-
-    > img {
-      border-radius: @border-radius-small;
-    }
-
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
-  }
-}
-
-
 @media screen and (max-width: @screen-tablet) {
-  #ad-detail-container, #ad-detail-content {
+  #ad-detail, #ad-detail-content {
     width: 100%;
   }
   #ad-detail-sidebar {
