--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -18,10 +18,10 @@
 {% block content %}
   {% set user = ad.user %}
 
-  <div id="ad-detail-container">
-    <div id="ad-detail-content" class="pull-left">
+  <div id="show-ad">
+    <div id="show-ad-content">
       <div class="panel panel-default">
-        <div class="panel-body toolbar">
+        <div id="show-ad-toolbar" class="panel-body">
           {% if app.user %}
             <div class="promote-action btn-group btn-group-sm">
               {% set promoted = app.user.hasPromote(ad) %}
@@ -68,11 +68,11 @@
           {% endif %}
         </div>
 
-        <div class="panel-body">
-          <p class="ad-description">{{ parse_url(parse_hashtag(ad.description)) }}</p>
+        <div class="panel-body ad-desc">
+          <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
         </div>
 
-        <div class="text-center">
+        <div id="show-ad-img">
           {% set src = vich_uploader_asset(ad, 'image') %}
           <img src="{{ src }}" alt="{{ ad.description }}">
         </div>
@@ -87,17 +87,17 @@
       {% endif %}
     </div>
 
-    <div id="ad-detail-sidebar" class="pull-left">
+    <div id="show-ad-owner">
       <div class="panel panel-default">
         <div class="panel-body clearfix">
           {% include 'AdstacyAppBundle:User:user_mini.html.twig' with { user: user, text: ago(ad.created) } %}
         </div>
         {% if user.about %}
-        <div class="panel-body user-about">
+        <div id="user-about" class="panel-body">
           <p>{{ user.about }}</p>
         </div>
         {% endif %}
-        <div class="thumb-container">
+        <div id="user-latest-ads" class="clearfix">
           {% for adByUser in adsByUser %}
             <div class="thumb">
               <a href="{{ path('adstacy_app_ad_show', {id: adByUser.id}) }}"><img src="{{ vich_uploader_asset(adByUser, 'image')|imagine_filter('mini_thumb')}}"
@@ -147,9 +147,9 @@
   {{ parent() }}
   <script type="text/javascript">
     $(function() {
-      $('#ad-detail-container').ajaxlink('promote_single');
-      $('#ad-detail-sidebar').ajaxlink('follow_single');
-      $('#ad-detail-sidebar').scrollToFixed({
+      $('#show-ad').ajaxlink('promote_single');
+      $('#show-ad-owner').ajaxlink('follow_single');
+      $('#show-ad-owner').scrollToFixed({
         marginTop: 55
       });
     });
