Design browse tags page for mobile.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/tags.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/tags.less
@@ -1,3 +1,18 @@
 #browse-tags {
+  padding-left: 0;
   
+  li {
+    border-top: 1px solid #ddd;
+    list-style-type: none;
+    padding: 5px 20px;
+
+    small {
+      color: #ccc;
+      font-size:11px;
+    }
+  }
+
+  li:first-child {
+    border-top: 0;
+  }
 }
