--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -12,6 +12,6 @@
 {% block content %}
   <div id="error-page">
     <h2>Server Error</h2>
-    <h3>There is something wrong with us. If the problem persist please kindly tell us at <a href="mailto:{{ adstacy_mail_support }}">Adstacy</h3>
+    <h3>There is something wrong with us. If the problem persist please kindly tell us <a href="{{ path('adstacy_app_contact') }}">here</h3>
   </div>
 {% endblock %}
